Configure surefire and failsafe for opening java modules